--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "http-errors": "~1.6.3",
     "moment": "^2.27.0",
     "mongodb": "^3.5.9",
+    "mongoose": "^5.10.11",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
     "node-xlsx": "^0.15.0",
+    "onesignal-node": "^3.2.0",
     "pug": "2.0.0-beta11",
     "read-excel-file": "^4.0.6",
     "uuid": "^8.2.0",
