--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^5.10.11",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
+    "node-cron": "^2.0.3",
     "node-xlsx": "^0.15.0",
     "onesignal-node": "^3.2.0",
     "pug": "2.0.0-beta11",
